Resolved Bug related to when a person messaged while I'm about to send a message to the applicant, sometime message send to wrong peron or program crashed. Most robust version Right now

--- a/Playwright/Applicants_registered.ipynb
+++ b/Playwright/Applicants_registered.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "492ae1ee-1b0c-41e9-8d4e-6687c85b0fd4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "d84b2ff8-35e3-44de-a70e-996672ad53e2",
    "metadata": {},
    "outputs": [],
@@ -35,10 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2a6caaaa-87af-4913-965f-c0d18ab2268a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(91, 35)\n",
+      "(76, 35)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -86,6 +94,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>64a1221ddc3d57001e95e9a5</td>\n",
+       "      <td>Amina Ehsan</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>applied</td>\n",
+       "      <td>Senior Marketing Specialist</td>\n",
+       "      <td>Perfect Purity</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>64997f041b4a4b001df78f83</td>\n",
+       "      <td>Saad Faisal</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>applied</td>\n",
+       "      <td>Business Development Executive</td>\n",
+       "      <td>The Brand Consultants</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>57.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>649973f438dc80001d120414</td>\n",
+       "      <td>Asif Ali</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>applied</td>\n",
+       "      <td>Human Resources Specialist</td>\n",
+       "      <td>Nakheel Transport &amp; Logistics</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>57.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6497e536d774dd001def7abb</td>\n",
+       "      <td>Fahad Javaid</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not applied</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>100.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>6498996654c390001de13b70</td>\n",
        "      <td>svqnxc NA</td>\n",
        "      <td>Yes</td>\n",
@@ -108,160 +212,66 @@
        "      <td>NaN</td>\n",
        "      <td>0.00%</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6497e0d6d774dd001def7952</td>\n",
-       "      <td>Hemant Bhoir</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Not applied</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>14.29%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6497f833b8f0c2001d3ae473</td>\n",
-       "      <td>Mirza Baig</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>applied</td>\n",
-       "      <td>Senior Marketing Specialist</td>\n",
-       "      <td>Perfect Purity</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28.57%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>64982f8954c390001de01fbc</td>\n",
-       "      <td>Veda Sree Pallam</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>applied</td>\n",
-       "      <td>Senior Marketing Specialist</td>\n",
-       "      <td>Perfect Purity</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>64982644b8f0c2001d3b1fdf</td>\n",
-       "      <td>Zubair Arshad</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>applied</td>\n",
-       "      <td>Senior Marketing Specialist</td>\n",
-       "      <td>Perfect Purity</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        _id         full_name email_provided  referrer_name  \\\n",
-       "0  6498996654c390001de13b70         svqnxc NA            Yes            NaN   \n",
-       "1  6497e0d6d774dd001def7952      Hemant Bhoir            Yes            NaN   \n",
-       "2  6497f833b8f0c2001d3ae473        Mirza Baig            Yes            NaN   \n",
-       "3  64982f8954c390001de01fbc  Veda Sree Pallam            Yes            NaN   \n",
-       "4  64982644b8f0c2001d3b1fdf     Zubair Arshad            Yes            NaN   \n",
+       "                        _id     full_name email_provided  referrer_name  \\\n",
+       "0  64a1221ddc3d57001e95e9a5   Amina Ehsan            Yes            NaN   \n",
+       "1  64997f041b4a4b001df78f83   Saad Faisal            Yes            NaN   \n",
+       "2  649973f438dc80001d120414      Asif Ali            Yes            NaN   \n",
+       "8  6497e536d774dd001def7abb  Fahad Javaid            Yes            NaN   \n",
+       "9  6498996654c390001de13b70     svqnxc NA            Yes            NaN   \n",
        "\n",
-       "   application                        title            name  onboardingstep  \\\n",
-       "0  Not applied                          NaN             NaN             NaN   \n",
-       "1  Not applied                          NaN             NaN             8.0   \n",
-       "2      applied  Senior Marketing Specialist  Perfect Purity            13.0   \n",
-       "3      applied  Senior Marketing Specialist  Perfect Purity            13.0   \n",
-       "4      applied  Senior Marketing Specialist  Perfect Purity            13.0   \n",
+       "   application                           title  \\\n",
+       "0      applied     Senior Marketing Specialist   \n",
+       "1      applied  Business Development Executive   \n",
+       "2      applied      Human Resources Specialist   \n",
+       "8  Not applied                             NaN   \n",
+       "9  Not applied                             NaN   \n",
        "\n",
-       "  aboutme1 profileheadline  ... company_values location nationality  gender  \\\n",
-       "0      NaN             NaN  ...            NaN      NaN         NaN     NaN   \n",
-       "1      NaN             NaN  ...            NaN      Yes         Yes     Yes   \n",
-       "2      NaN             NaN  ...            NaN      Yes         Yes     Yes   \n",
-       "3      NaN             NaN  ...            NaN      Yes         Yes     Yes   \n",
-       "4      NaN             NaN  ...            NaN      Yes         Yes     Yes   \n",
+       "                             name  onboardingstep aboutme1 profileheadline  \\\n",
+       "0                  Perfect Purity            13.0      NaN             NaN   \n",
+       "1           The Brand Consultants            13.0      NaN             NaN   \n",
+       "2  Nakheel Transport & Logistics             13.0      NaN             NaN   \n",
+       "8                             NaN            13.0      Yes             NaN   \n",
+       "9                             NaN             NaN      NaN             NaN   \n",
        "\n",
-       "  photo  phone_number languages secondaryemail whatsappnumber  \\\n",
-       "0   NaN           NaN       NaN            NaN            NaN   \n",
-       "1   NaN           NaN       NaN            NaN            NaN   \n",
-       "2   Yes           NaN       NaN            NaN            NaN   \n",
-       "3   NaN           Yes       NaN            NaN            NaN   \n",
-       "4   Yes           Yes       NaN            NaN            NaN   \n",
+       "   ... company_values location nationality  gender photo  phone_number  \\\n",
+       "0  ...            NaN      Yes         Yes     Yes   Yes           Yes   \n",
+       "1  ...            NaN      Yes         Yes     Yes   Yes           Yes   \n",
+       "2  ...            NaN      Yes         Yes     Yes   Yes           Yes   \n",
+       "8  ...            Yes      Yes         Yes     Yes   Yes           Yes   \n",
+       "9  ...            NaN      NaN         NaN     NaN   NaN           NaN   \n",
        "\n",
-       "  Profile Completion %  \n",
-       "0                0.00%  \n",
-       "1               14.29%  \n",
-       "2               28.57%  \n",
-       "3               57.14%  \n",
-       "4               57.14%  \n",
+       "  languages secondaryemail whatsappnumber Profile Completion %  \n",
+       "0       NaN            Yes            NaN               57.14%  \n",
+       "1       NaN            NaN            NaN               57.14%  \n",
+       "2       NaN            Yes            Yes               57.14%  \n",
+       "8       NaN            NaN            NaN              100.00%  \n",
+       "9       NaN            NaN            NaN                0.00%  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_new = pd.read_csv(\"FILES/Applicants_new.csv\")\n",
-    "df_new = df_new[~df_new.duplicated(subset = '_id')]\n",
+    "print(df_new.shape)\n",
+    "df_new = df_new.drop_duplicates(keep= \"first\", subset = \"_id\")\n",
+    "print(df_new.shape)\n",
     "df_new.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "738fbad7-6fab-44c9-be04-3007903e6d13",
    "metadata": {},
    "outputs": [],
@@ -272,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "3bced69c-53bb-47da-b16b-df8ee41b2f5a",
    "metadata": {},
    "outputs": [],
@@ -282,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "cc58ce12-d9f0-48c4-abaf-aeb528c8a1a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(36, 38)"
+       "(44, 38)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,13 +311,14 @@
     "# df_new = df_new[df_new['ProfileCompletion'] < 100].reset_index(drop=True)\n",
     "# df_new.head()\n",
     "\n",
+    "# df_new2 = df_new[df_new['ProfileCompletion'] == 100].reset_index(drop=True)\n",
     "df_new2 = df_new[df_new['onboardingstep'] == 13].reset_index(drop=True)\n",
     "df_new2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "f5850607-08e8-47b8-878f-3152b1567934",
    "metadata": {},
    "outputs": [],
@@ -325,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "bfad9c7a-69b2-486c-9c7d-52607ea89e52",
    "metadata": {},
    "outputs": [],
@@ -336,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "8bbbd8bf-9629-46ad-bc45-a9f2b6ed0b14",
    "metadata": {},
    "outputs": [
@@ -860,10 +871,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.00%</td>\n",
+       "      <td>14.29%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>14.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -1389,7 +1400,7 @@
        "16       NaN            NaN            NaN                0.00%   \n",
        "17       NaN            NaN            NaN                0.00%   \n",
        "18       NaN            NaN            NaN                0.00%   \n",
-       "19       NaN            NaN            NaN                0.00%   \n",
+       "19       NaN            NaN            NaN               14.29%   \n",
        "20       NaN            NaN            NaN               57.14%   \n",
        "21       NaN            NaN            NaN               28.57%   \n",
        "22       NaN            Yes            Yes               57.14%   \n",
@@ -1427,7 +1438,7 @@
        "16  2023-06-25 23:49:25               3               0.0  \n",
        "17  2023-06-25 23:49:25               3               0.0  \n",
        "18  2023-06-25 23:49:25               3               0.0  \n",
-       "19  2023-06-25 23:49:25               3               0.0  \n",
+       "19  2023-06-25 23:49:25               3             14.29  \n",
        "20  2023-06-25 23:49:25               3             57.14  \n",
        "21  2023-06-25 23:49:25               3             28.57  \n",
        "22  2023-06-25 23:49:25               3             57.14  \n",
@@ -1448,7 +1459,7 @@
        "[36 rows x 38 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
