--- a/Playwright/Applicants_registered.ipynb
+++ b/Playwright/Applicants_registered.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "492ae1ee-1b0c-41e9-8d4e-6687c85b0fd4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d84b2ff8-35e3-44de-a70e-996672ad53e2",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2a6caaaa-87af-4913-965f-c0d18ab2268a",
    "metadata": {},
    "outputs": [
@@ -43,8 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(91, 35)\n",
-      "(76, 35)\n"
+      "(123, 35)\n",
+      "(108, 35)\n"
      ]
     },
     {
@@ -94,32 +94,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>64a1221ddc3d57001e95e9a5</td>\n",
-       "      <td>Amina Ehsan</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>applied</td>\n",
-       "      <td>Senior Marketing Specialist</td>\n",
-       "      <td>Perfect Purity</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>64997f041b4a4b001df78f83</td>\n",
-       "      <td>Saad Faisal</td>\n",
+       "      <td>649c01f7dc3d57001e82ccf5</td>\n",
+       "      <td>Muhammad Zohaib Ali</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>applied</td>\n",
@@ -133,49 +109,49 @@
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>57.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>649cfe9d1b4a4b001d03572e</td>\n",
+       "      <td>Surendran Marimuthu</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>applied</td>\n",
+       "      <td>Senior Marketing Specialist</td>\n",
+       "      <td>Perfect Purity</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>57.14%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>649973f438dc80001d120414</td>\n",
-       "      <td>Asif Ali</td>\n",
+       "      <td>649825e637ce31001d249e52</td>\n",
+       "      <td>Ricky Ramadhan</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>applied</td>\n",
-       "      <td>Human Resources Specialist</td>\n",
-       "      <td>Nakheel Transport &amp; Logistics</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>57.14%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6497e536d774dd001def7abb</td>\n",
-       "      <td>Fahad Javaid</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Not applied</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Senior Marketing Specialist</td>\n",
+       "      <td>Perfect Purity</td>\n",
        "      <td>13.0</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>...</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
@@ -183,15 +159,15 @@
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>100.00%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>6498996654c390001de13b70</td>\n",
-       "      <td>svqnxc NA</td>\n",
+       "      <th>3</th>\n",
+       "      <td>64a2f3596f2c03001d9d4710</td>\n",
+       "      <td>Mehran Hassan</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Not applied</td>\n",
@@ -212,51 +188,75 @@
        "      <td>NaN</td>\n",
        "      <td>0.00%</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64a29a23e358e2001d698a21</td>\n",
+       "      <td>Zeeshan Ahmad Bangash</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Not applied</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00%</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        _id     full_name email_provided  referrer_name  \\\n",
-       "0  64a1221ddc3d57001e95e9a5   Amina Ehsan            Yes            NaN   \n",
-       "1  64997f041b4a4b001df78f83   Saad Faisal            Yes            NaN   \n",
-       "2  649973f438dc80001d120414      Asif Ali            Yes            NaN   \n",
-       "8  6497e536d774dd001def7abb  Fahad Javaid            Yes            NaN   \n",
-       "9  6498996654c390001de13b70     svqnxc NA            Yes            NaN   \n",
+       "                        _id              full_name email_provided  \\\n",
+       "0  649c01f7dc3d57001e82ccf5    Muhammad Zohaib Ali            Yes   \n",
+       "1  649cfe9d1b4a4b001d03572e    Surendran Marimuthu            Yes   \n",
+       "2  649825e637ce31001d249e52         Ricky Ramadhan            Yes   \n",
+       "3  64a2f3596f2c03001d9d4710          Mehran Hassan            Yes   \n",
+       "4  64a29a23e358e2001d698a21  Zeeshan Ahmad Bangash            Yes   \n",
        "\n",
-       "   application                           title  \\\n",
-       "0      applied     Senior Marketing Specialist   \n",
-       "1      applied  Business Development Executive   \n",
-       "2      applied      Human Resources Specialist   \n",
-       "8  Not applied                             NaN   \n",
-       "9  Not applied                             NaN   \n",
+       "   referrer_name  application                           title  \\\n",
+       "0            NaN      applied  Business Development Executive   \n",
+       "1            NaN      applied     Senior Marketing Specialist   \n",
+       "2            NaN      applied     Senior Marketing Specialist   \n",
+       "3            NaN  Not applied                             NaN   \n",
+       "4            NaN  Not applied                             NaN   \n",
        "\n",
-       "                             name  onboardingstep aboutme1 profileheadline  \\\n",
-       "0                  Perfect Purity            13.0      NaN             NaN   \n",
-       "1           The Brand Consultants            13.0      NaN             NaN   \n",
-       "2  Nakheel Transport & Logistics             13.0      NaN             NaN   \n",
-       "8                             NaN            13.0      Yes             NaN   \n",
-       "9                             NaN             NaN      NaN             NaN   \n",
+       "                    name  onboardingstep aboutme1 profileheadline  ...  \\\n",
+       "0  The Brand Consultants            13.0      NaN             NaN  ...   \n",
+       "1         Perfect Purity            13.0      NaN             NaN  ...   \n",
+       "2         Perfect Purity            13.0      Yes             Yes  ...   \n",
+       "3                    NaN             NaN      NaN             NaN  ...   \n",
+       "4                    NaN             3.0      NaN             NaN  ...   \n",
        "\n",
-       "   ... company_values location nationality  gender photo  phone_number  \\\n",
-       "0  ...            NaN      Yes         Yes     Yes   Yes           Yes   \n",
-       "1  ...            NaN      Yes         Yes     Yes   Yes           Yes   \n",
-       "2  ...            NaN      Yes         Yes     Yes   Yes           Yes   \n",
-       "8  ...            Yes      Yes         Yes     Yes   Yes           Yes   \n",
-       "9  ...            NaN      NaN         NaN     NaN   NaN           NaN   \n",
+       "  company_values location nationality  gender photo phone_number languages  \\\n",
+       "0            NaN      Yes         Yes     Yes   NaN          Yes       NaN   \n",
+       "1            NaN      Yes         Yes     Yes   NaN          Yes       NaN   \n",
+       "2            Yes      Yes         Yes     Yes   Yes          Yes       Yes   \n",
+       "3            NaN      NaN         NaN     NaN   NaN          NaN       NaN   \n",
+       "4            NaN      Yes         Yes     NaN   NaN          NaN       NaN   \n",
        "\n",
-       "  languages secondaryemail whatsappnumber Profile Completion %  \n",
-       "0       NaN            Yes            NaN               57.14%  \n",
-       "1       NaN            NaN            NaN               57.14%  \n",
-       "2       NaN            Yes            Yes               57.14%  \n",
-       "8       NaN            NaN            NaN              100.00%  \n",
-       "9       NaN            NaN            NaN                0.00%  \n",
+       "  secondaryemail whatsappnumber Profile Completion %  \n",
+       "0            Yes            Yes               57.14%  \n",
+       "1            Yes            Yes               57.14%  \n",
+       "2            Yes            Yes              100.00%  \n",
+       "3            NaN            NaN                0.00%  \n",
+       "4            NaN            NaN                0.00%  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "738fbad7-6fab-44c9-be04-3007903e6d13",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3bced69c-53bb-47da-b16b-df8ee41b2f5a",
    "metadata": {},
    "outputs": [],
@@ -292,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cc58ce12-d9f0-48c4-abaf-aeb528c8a1a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(44, 38)"
+       "(64, 38)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,6 +313,7 @@
     "\n",
     "# df_new2 = df_new[df_new['ProfileCompletion'] == 100].reset_index(drop=True)\n",
     "df_new2 = df_new[df_new['onboardingstep'] == 13].reset_index(drop=True)\n",
+    "# df_new2 = df_new[df_new['application'] == 'applied'].reset_index(drop=True)\n",
     "df_new2.shape"
    ]
   },
@@ -823,10 +824,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.00%</td>\n",
+       "      <td>14.29%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>14.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -1398,7 +1399,7 @@
        "14       NaN            Yes            NaN               42.86%   \n",
        "15       NaN            NaN            NaN               14.29%   \n",
        "16       NaN            NaN            NaN                0.00%   \n",
-       "17       NaN            NaN            NaN                0.00%   \n",
+       "17       NaN            NaN            NaN               14.29%   \n",
        "18       NaN            NaN            NaN                0.00%   \n",
        "19       NaN            NaN            NaN               14.29%   \n",
        "20       NaN            NaN            NaN               57.14%   \n",
@@ -1436,7 +1437,7 @@
        "14  2023-06-25 23:49:25               3             42.86  \n",
        "15  2023-06-25 23:49:25               3             14.29  \n",
        "16  2023-06-25 23:49:25               3               0.0  \n",
-       "17  2023-06-25 23:49:25               3               0.0  \n",
+       "17  2023-06-25 23:49:25               3             14.29  \n",
        "18  2023-06-25 23:49:25               3               0.0  \n",
        "19  2023-06-25 23:49:25               3             14.29  \n",
        "20  2023-06-25 23:49:25               3             57.14  \n",
