To avoid getting detected as bot, I've deleted navigator.webdriver, also increased some timeout initally to get website loaded

--- a/Playwright/Applicants_registered.ipynb
+++ b/Playwright/Applicants_registered.ipynb
@@ -43,8 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(123, 35)\n",
-      "(108, 35)\n"
+      "(146, 35)\n",
+      "(130, 35)\n"
      ]
     },
     {
@@ -94,64 +94,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>649c01f7dc3d57001e82ccf5</td>\n",
-       "      <td>Muhammad Zohaib Ali</td>\n",
+       "      <td>64a580b812d25b001d798a57</td>\n",
+       "      <td>Ubaid Mufti</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>applied</td>\n",
-       "      <td>Business Development Executive</td>\n",
-       "      <td>The Brand Consultants</td>\n",
+       "      <td>UI/UX Designer</td>\n",
+       "      <td>Venture Republic</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>57.14%</td>\n",
+       "      <td>100.00%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>649cfe9d1b4a4b001d03572e</td>\n",
-       "      <td>Surendran Marimuthu</td>\n",
+       "      <td>64a568e9fa84ef001e82510e</td>\n",
+       "      <td>Fatima Zahid</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>applied</td>\n",
-       "      <td>Senior Marketing Specialist</td>\n",
-       "      <td>Perfect Purity</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>Not applied</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>57.14%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>649825e637ce31001d249e52</td>\n",
-       "      <td>Ricky Ramadhan</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>applied</td>\n",
-       "      <td>Senior Marketing Specialist</td>\n",
-       "      <td>Perfect Purity</td>\n",
        "      <td>13.0</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
@@ -165,52 +141,76 @@
        "      <td>100.00%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>64a28e221b4a4b001d1f2429</td>\n",
+       "      <td>Rehan khan</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>applied</td>\n",
+       "      <td>UI/UX Designer</td>\n",
+       "      <td>Venture Republic</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100.00%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>64a2f3596f2c03001d9d4710</td>\n",
-       "      <td>Mehran Hassan</td>\n",
+       "      <td>64a2893638dc80001d3b7a74</td>\n",
+       "      <td>Muhammad Umair Asghar</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Not applied</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00%</td>\n",
+       "      <td>14.29%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>64a29a23e358e2001d698a21</td>\n",
-       "      <td>Zeeshan Ahmad Bangash</td>\n",
+       "      <td>64a3c7a603dea0001d149f1d</td>\n",
+       "      <td>Abdul Rehman Lodhi</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Not applied</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00%</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100.00%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -219,39 +219,39 @@
       ],
       "text/plain": [
        "                        _id              full_name email_provided  \\\n",
-       "0  649c01f7dc3d57001e82ccf5    Muhammad Zohaib Ali            Yes   \n",
-       "1  649cfe9d1b4a4b001d03572e    Surendran Marimuthu            Yes   \n",
-       "2  649825e637ce31001d249e52         Ricky Ramadhan            Yes   \n",
-       "3  64a2f3596f2c03001d9d4710          Mehran Hassan            Yes   \n",
-       "4  64a29a23e358e2001d698a21  Zeeshan Ahmad Bangash            Yes   \n",
+       "0  64a580b812d25b001d798a57            Ubaid Mufti            Yes   \n",
+       "1  64a568e9fa84ef001e82510e           Fatima Zahid            Yes   \n",
+       "2  64a28e221b4a4b001d1f2429             Rehan khan            Yes   \n",
+       "3  64a2893638dc80001d3b7a74  Muhammad Umair Asghar            Yes   \n",
+       "4  64a3c7a603dea0001d149f1d     Abdul Rehman Lodhi            Yes   \n",
        "\n",
-       "   referrer_name  application                           title  \\\n",
-       "0            NaN      applied  Business Development Executive   \n",
-       "1            NaN      applied     Senior Marketing Specialist   \n",
-       "2            NaN      applied     Senior Marketing Specialist   \n",
-       "3            NaN  Not applied                             NaN   \n",
-       "4            NaN  Not applied                             NaN   \n",
+       "   referrer_name  application           title              name  \\\n",
+       "0            NaN      applied  UI/UX Designer  Venture Republic   \n",
+       "1            NaN  Not applied             NaN               NaN   \n",
+       "2            NaN      applied  UI/UX Designer  Venture Republic   \n",
+       "3            NaN  Not applied             NaN               NaN   \n",
+       "4            NaN  Not applied             NaN               NaN   \n",
        "\n",
-       "                    name  onboardingstep aboutme1 profileheadline  ...  \\\n",
-       "0  The Brand Consultants            13.0      NaN             NaN  ...   \n",
-       "1         Perfect Purity            13.0      NaN             NaN  ...   \n",
-       "2         Perfect Purity            13.0      Yes             Yes  ...   \n",
-       "3                    NaN             NaN      NaN             NaN  ...   \n",
-       "4                    NaN             3.0      NaN             NaN  ...   \n",
+       "   onboardingstep aboutme1 profileheadline  ... company_values location  \\\n",
+       "0            13.0      Yes             NaN  ...            Yes      Yes   \n",
+       "1            13.0      Yes             NaN  ...            Yes      Yes   \n",
+       "2            13.0      Yes             NaN  ...            Yes      Yes   \n",
+       "3             8.0      NaN             NaN  ...            NaN      Yes   \n",
+       "4            13.0      Yes             NaN  ...            Yes      Yes   \n",
        "\n",
-       "  company_values location nationality  gender photo phone_number languages  \\\n",
-       "0            NaN      Yes         Yes     Yes   NaN          Yes       NaN   \n",
-       "1            NaN      Yes         Yes     Yes   NaN          Yes       NaN   \n",
-       "2            Yes      Yes         Yes     Yes   Yes          Yes       Yes   \n",
-       "3            NaN      NaN         NaN     NaN   NaN          NaN       NaN   \n",
-       "4            NaN      Yes         Yes     NaN   NaN          NaN       NaN   \n",
+       "  nationality  gender photo phone_number languages secondaryemail  \\\n",
+       "0         Yes     Yes   Yes          Yes       NaN            Yes   \n",
+       "1         Yes     Yes   Yes          Yes       Yes            Yes   \n",
+       "2         Yes     Yes   Yes          Yes       NaN            Yes   \n",
+       "3         Yes     Yes   NaN          NaN       NaN            NaN   \n",
+       "4         Yes     Yes   Yes          Yes       NaN            Yes   \n",
        "\n",
-       "  secondaryemail whatsappnumber Profile Completion %  \n",
-       "0            Yes            Yes               57.14%  \n",
-       "1            Yes            Yes               57.14%  \n",
-       "2            Yes            Yes              100.00%  \n",
-       "3            NaN            NaN                0.00%  \n",
-       "4            NaN            NaN                0.00%  \n",
+       "  whatsappnumber Profile Completion %  \n",
+       "0            NaN              100.00%  \n",
+       "1            Yes              100.00%  \n",
+       "2            Yes              100.00%  \n",
+       "3            NaN               14.29%  \n",
+       "4            Yes              100.00%  \n",
        "\n",
        "[5 rows x 35 columns]"
       ]
@@ -292,17 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "cc58ce12-d9f0-48c4-abaf-aeb528c8a1a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64, 38)"
+       "(59, 38)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,14 +312,15 @@
     "# df_new.head()\n",
     "\n",
     "# df_new2 = df_new[df_new['ProfileCompletion'] == 100].reset_index(drop=True)\n",
-    "df_new2 = df_new[df_new['onboardingstep'] == 13].reset_index(drop=True)\n",
-    "# df_new2 = df_new[df_new['application'] == 'applied'].reset_index(drop=True)\n",
+    "# df_new2 = df_new[df_new['onboardingstep'] == 13].reset_index(drop=True)\n",
+    "df_new2 = df_new[df_new['application'] == 'applied'].reset_index(drop=True)\n",
+    "# df_new2 = df_new[(df_new['ProfileCompletion'] == 100)  & (df_new['application'] == 'applied')] .reset_index(drop=True)\n",
     "df_new2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f5850607-08e8-47b8-878f-3152b1567934",
    "metadata": {},
    "outputs": [],
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bfad9c7a-69b2-486c-9c7d-52607ea89e52",
    "metadata": {},
    "outputs": [],
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8bbbd8bf-9629-46ad-bc45-a9f2b6ed0b14",
    "metadata": {},
    "outputs": [
@@ -536,10 +537,10 @@
        "      <td>NaN</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
+       "      <td>100.00%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>57.14</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -752,10 +753,10 @@
        "      <td>NaN</td>\n",
        "      <td>Yes</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>42.86%</td>\n",
+       "      <td>100.00%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>42.86</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -896,10 +897,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
+       "      <td>100.00%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>57.14</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -920,10 +921,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>28.57%</td>\n",
+       "      <td>85.71%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>28.57</td>\n",
+       "      <td>85.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -1232,10 +1233,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>57.14%</td>\n",
+       "      <td>100.00%</td>\n",
        "      <td>2023-06-25 23:49:25</td>\n",
        "      <td>3</td>\n",
-       "      <td>57.14</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
@@ -1387,7 +1388,7 @@
        "2        NaN            NaN            Yes               57.14%   \n",
        "3        NaN            NaN            NaN              100.00%   \n",
        "4        NaN            Yes            Yes              100.00%   \n",
-       "5        NaN            Yes            NaN               57.14%   \n",
+       "5        NaN            Yes            NaN              100.00%   \n",
        "6        NaN            NaN            NaN                0.00%   \n",
        "7        NaN            NaN            NaN               14.29%   \n",
        "8        NaN            Yes            Yes              100.00%   \n",
@@ -1396,14 +1397,14 @@
        "11       NaN            Yes            Yes               57.14%   \n",
        "12       NaN            NaN            NaN                0.00%   \n",
        "13       NaN            NaN            NaN               14.29%   \n",
-       "14       NaN            Yes            NaN               42.86%   \n",
+       "14       NaN            Yes            NaN              100.00%   \n",
        "15       NaN            NaN            NaN               14.29%   \n",
        "16       NaN            NaN            NaN                0.00%   \n",
        "17       NaN            NaN            NaN               14.29%   \n",
        "18       NaN            NaN            NaN                0.00%   \n",
        "19       NaN            NaN            NaN               14.29%   \n",
-       "20       NaN            NaN            NaN               57.14%   \n",
-       "21       NaN            NaN            NaN               28.57%   \n",
+       "20       NaN            NaN            NaN              100.00%   \n",
+       "21       NaN            NaN            NaN               85.71%   \n",
        "22       NaN            Yes            Yes               57.14%   \n",
        "23       NaN            NaN            NaN                0.00%   \n",
        "24       NaN            Yes            Yes               57.14%   \n",
@@ -1416,7 +1417,7 @@
        "31       NaN            Yes            Yes               42.86%   \n",
        "32       NaN            NaN            NaN               14.29%   \n",
        "33       NaN            Yes            Yes              100.00%   \n",
-       "34       NaN            NaN            NaN               57.14%   \n",
+       "34       NaN            NaN            NaN              100.00%   \n",
        "35       NaN            Yes            NaN               57.14%   \n",
        "\n",
        "           Current_Time Remaining Count ProfileCompletion  \n",
@@ -1425,7 +1426,7 @@
        "2   2023-06-25 23:49:25               3             57.14  \n",
        "3   2023-06-25 23:49:25               3             100.0  \n",
        "4   2023-06-25 23:49:25               3             100.0  \n",
-       "5   2023-06-25 23:49:25               3             57.14  \n",
+       "5   2023-06-25 23:49:25               3             100.0  \n",
        "6   2023-06-25 23:49:25               3               0.0  \n",
        "7   2023-06-25 23:49:25               3             14.29  \n",
        "8   2023-06-25 23:49:25               3             100.0  \n",
@@ -1434,14 +1435,14 @@
        "11  2023-06-25 23:49:25               3             57.14  \n",
        "12  2023-06-25 23:49:25               3               0.0  \n",
        "13  2023-06-25 23:49:25               3             14.29  \n",
-       "14  2023-06-25 23:49:25               3             42.86  \n",
+       "14  2023-06-25 23:49:25               3             100.0  \n",
        "15  2023-06-25 23:49:25               3             14.29  \n",
        "16  2023-06-25 23:49:25               3               0.0  \n",
        "17  2023-06-25 23:49:25               3             14.29  \n",
        "18  2023-06-25 23:49:25               3               0.0  \n",
        "19  2023-06-25 23:49:25               3             14.29  \n",
-       "20  2023-06-25 23:49:25               3             57.14  \n",
-       "21  2023-06-25 23:49:25               3             28.57  \n",
+       "20  2023-06-25 23:49:25               3             100.0  \n",
+       "21  2023-06-25 23:49:25               3             85.71  \n",
        "22  2023-06-25 23:49:25               3             57.14  \n",
        "23  2023-06-25 23:49:25               3               0.0  \n",
        "24  2023-06-25 23:49:25               3             57.14  \n",
@@ -1454,7 +1455,7 @@
        "31  2023-06-25 23:49:25               3             42.86  \n",
        "32  2023-06-25 23:49:25               3             14.29  \n",
        "33  2023-06-25 23:49:25               3             100.0  \n",
-       "34  2023-06-25 23:49:25               3             57.14  \n",
+       "34  2023-06-25 23:49:25               3             100.0  \n",
        "35  2023-06-25 23:49:25               3             57.14  \n",
        "\n",
        "[36 rows x 38 columns]"
